@@ -1,6 +1,7 @@
 package com.github.sirblobman.api.nms;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -56,7 +57,6 @@ public final class HeadHandler_1_18_R2 extends HeadHandler {
     }
 
     @Override
-    @SuppressWarnings("deprecation")
     public @NotNull ItemStack getBase64Head(@NotNull String base64, @Nullable UUID customId) {
         ItemStack item = XMaterial.PLAYER_HEAD.parseItem();
         if (item == null) {
@@ -74,7 +74,6 @@ public final class HeadHandler_1_18_R2 extends HeadHandler {
         return item;
     }
 
-    @SuppressWarnings("deprecation")
     private PlayerProfile createPlayerProfile(String base64, UUID uniqueId) {
         PlayerProfile profile = Bukkit.createPlayerProfile(uniqueId, "custom");
         PlayerTextures textures = profile.getTextures();
@@ -98,7 +97,7 @@ public final class HeadHandler_1_18_R2 extends HeadHandler {
         String url = skin.get("url").getAsString();
 
         try {
-            return new URL(url);
+            return URI.create(url).toURL();
         } catch (MalformedURLException ignored) {
             return null;
         }
